# OpenApi/trainingHub.yaml
@@ -273,7 +273,7 @@ components:
             - Beginner
             - Intermediate
             - Professional
-        instructor_name:
+        instructorName:
           type: string
           example: Mr. John
         rating:
@@ -293,9 +293,8 @@ components:
         - id
         - description
         - category
-        - instructor_name
+        - instructorName
         - rating
-   
     Comment:
       type: object
       properties:
@@ -303,10 +302,6 @@ components:
           type: integer
           format: int64
           example: 1
-#        course_id:
-#          type: integer
-#          format: int64
-#          example: 10
         author:
           type: string
           example: Mr. Ali
@@ -317,16 +312,10 @@ components:
         comment:
           type: string
           example: This course helped me to get me my first job
-#        comment_date_time:
-#          type: string
-#          format: date-time
-#          example: 2023-08-15T14:30:00Z
       xml:
         name: comment
       required:
         - id
-        - course_id
         - author
         - rating
         - comment
-        - comment_date_time
