# src/main/java/com/example/trainingHub/model/Comment.java
@@ -1,4 +1,6 @@
 package com.example.trainingHub.model;
+
+import com.fasterxml.jackson.annotation.JsonBackReference;
 import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -17,9 +19,13 @@ public class Comment {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Integer id;
-    private Integer course_id;
     private String author;
-    private int rating;
     private String comment;
+    private int rating;
     private LocalDateTime comment_date_time;
+    @ManyToOne
+    @JoinColumn(name="course_id")
+    @JsonBackReference
+    private Course course;
+
 }
